IOStreamBuf: basic_streambuf for IOBufs
Allows chained IOBufs to be read via std::istream without having to coalesce
them into a single contiguous buffer first.

Works with any single-byte type, eg. `char` or `uint8_t`.
Not currently usable on multi-byte types like `wchar_t` due to the extra
complexity involved in recomposing multi-byte characters that are split
across IOBuf boundaries. (static_assert prevents use with multi-byte
types.)

Currently read-only; cannot be used with a `std::ostream`.

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -204,6 +204,8 @@ nobase_follyinclude_HEADERS = \
 	io/Cursor.h \
 	io/Cursor-inl.h \
 	io/IOBuf.h \
+	io/IOStreamBuf.h \
+	io/IOStreamBuf.tcc \
 	io/IOBufQueue.h \
 	io/RecordIO.h \
 	io/RecordIO-inl.h \
