--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,13 @@ aclocal.m4
 autom4te.cache
 build-aux
 libtool
-folly/test/gtest-1.*
+folly/test/gtest
 folly/folly-config.h
-folly/test/*_benchmark
-folly/test/*_test
-folly/test/*_test_using_jemalloc
+folly/**/test/*_benchmark
+folly/**/test/*.log
+folly/**/test/*_test
+folly/**/test/*_test_using_jemalloc
+folly/**/test/*.trs
 folly/config.*
 folly/configure
 folly/libfolly.pc
