--- a/folly/experimental/io/test/Makefile.am
+++ b/folly/experimental/io/test/Makefile.am
@@ -1,5 +1,12 @@
 ACLOCAL_AMFLAGS = -I m4
 
-TESTS =
+CPPFLAGS = -I$(top_srcdir)/test/gtest/googletest/include
+ldadd = $(top_builddir)/test/libfollytestmain.la
 
-check_PROGRAMS = $(TESTS)
+check_PROGRAMS = \
+	fs_util_test
+
+TESTS = $(check_PROGRAMS)
+
+fs_util_test_SOURCES = FsUtilTest.cpp
+fs_util_test_LDADD = $(ldadd)
