--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ folly/m4/ltoptions.m4
 folly/m4/ltsugar.m4
 folly/m4/ltversion.m4
 folly/m4/lt~obsolete.m4
-folly/generate_fingerprint_tables
+folly/generate_fingerprint_tables*
 folly/FormatTables.cpp
 folly/EscapeTables.cpp
 folly/GroupVarintTables.cpp
