Fix the linking of various tests against GMock
Summary: A define was needed to be able to link when built against a shared-library version of gmock and gtest.

Reviewed By: yfeldblum

Differential Revision: D5100409

fbshipit-source-id: 9a4c9df20f682a25edde642c451476b2d1e1ae22

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -263,6 +263,10 @@ if (BUILD_TESTS)
     ${FOLLY_DIR}/io/async/test/UndelayedDestruction.h
     ${FOLLY_DIR}/io/async/test/Util.h
   )
+  target_compile_definitions(folly_test_support
+    PUBLIC
+      ${LIBGMOCK_DEFINES}
+  )
   target_include_directories(folly_test_support
     PUBLIC
       ${LIBGMOCK_INCLUDE_DIR}
