--- a/folly/stats/test/Makefile.am
+++ b/folly/stats/test/Makefile.am
@@ -3,6 +3,8 @@ ACLOCAL_AMFLAGS = -I m4
 CPPFLAGS = -I$(top_srcdir)/test/gtest/googletest/include
 ldadd = $(top_builddir)/test/libfollytestmain.la
 
+libgtest_la_SOURCES = gtest/googletest/src/gtest-all.cc
+
 check_PROGRAMS = \
 	histogram_test
 
